# monte-carlo-budget-article

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug.md  task.md
article/: monte-carlo-budget-pt.md  monte-carlo-budget.md
docs/: model-design.md  outline.md  thesis.md
exercises/: ex01_probability_foundations.md  ex02_convergence.md  ex03_clt.md  ex04_monte_carlo.md  ex05_variance_reduction.md
notebooks/: 01_probability_foundations.ipynb  02_lln_convergence.ipynb  03_clt_confidence.ipynb  04_monte_carlo_core.ipynb  05_variance_reduction.ipynb  06_budget_simulation.ipynb
notes/: phase1-probability.md  phase2-convergence.md  phase3-clt.md  phase4-monte-carlo.md  phase5-variance-reduction.md  phase6-bayesian-comparison.md
scripts/: exp_budget_simulation.py  exp_clt_normality.py  exp_convergence.py  exp_sensitivity.py  exp_variance_reduction.py  gen_convergence_gif.py  gh-create-all-issues.sh  gh-setup-phase0.sh
src/: analysis.py  model.py  monte_carlo.py  variance_reduction.py
tests/: test_analysis.py  test_model.py  test_monte_carlo.py  test_variance_reduction.py
til/: README.md  til-phase-1-linearity-without-independence.md  til-phase-2-chebyshev-is-loose-by-design.md  til-phase-3-precision-is-quadratic.md  til-phase-4-dimension-free-convergence.md  til-phase-5-control-variate-as-leverage.md  til-phase-6-fyf-is-bayesian-update.md  til-phase-7-tornado-tells-you-where-to-spend.md
