[project]
name = "monte-carlo-budget-article"
version = "0.1.0"
description = "Monte Carlo simulation for IT budget planning — from point estimates to probability distributions"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Bruno Ramos Martins"},
]
dependencies = [
    "numpy>=1.26,<2.0",
    "scipy>=1.12,<2.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "pandas>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.3,<1.0",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
